--- a/Koa.yml
+++ b/Koa.yml
@@ -32,6 +32,9 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: |
+        run: theme: jekyll-theme-minimal
+title:koagonzalo11’s homepage
+description: Bookmark this to keep an eye on my project updates!
+
           echo Add other actions to build,
           echo test, and deploy your project.
